--- a/src/main/webapp/partials/partial1.html
+++ b/src/main/webapp/partials/partial1.html
@@ -1,4 +1,8 @@
 <p>This is the partial for view 1.</p>
 <p>
     Getting version from the scope: {{ scopedAppVersion }}
+
+    <div class="gridStyle" ng-grid="gridOptions">
+    </div>
+
 </p>
