config restangular and impl a grid structure for employee

--- a/src/main/webapp/partials/employee.html
+++ b/src/main/webapp/partials/employee.html
@@ -1,10 +1,1 @@
-<!-- <div class="gridStyle" ng-grid="gridOptions">
-</div> -->
-
-<gridify ng-model="gridOptions"></gridify>
-
-<ul>
-    <li ng-repeat="record in myData">
-        {{ record | json }}
-    </li>
-</ul>
+<gridify ng-model="gridOptions" ng-class="gridStyle"></gridify>
