finish various entity endpoints

--- a/src/main/webapp/partials/employee.html
+++ b/src/main/webapp/partials/employee.html
@@ -1,1 +1,7 @@
+<div id="employeeGridOptions">
+    <button class="btn btn-md btn-primary" ng-click="clickGridOptions()">
+        Grid Options
+    </button>
+</div>
+
 <gridify ng-model="gridOptions" ng-class="gridStyle"></gridify>
