--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -36,3 +36,29 @@ html * {
   width: 100%;
   height: 700px;
 }
+
+.fs14 {
+    font-size: 14px;
+}
+
+.nrb {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.w60 {
+  width: 60px;
+}
+
+.pr5 {
+  padding-right: 5px;
+}
+
+/*grid max page*/
+.ngGridMaxPagesNumber {
+  vertical-align: middle;
+  position: relative;
+  bottom: 5px;
+}
