define service and introduce select2

--- a/src/main/webapp/partials/division.html
+++ b/src/main/webapp/partials/division.html
@@ -4,4 +4,11 @@
     </button>
 </div>
 
+<select ui-select2 ng-model="select2" data-placeholder="Pick a number">
+    <option value=""></option>
+    <option value="one">First</option>
+    <option value="two">Second</option>
+    <option value="three">Third</option>
+</select>
+
 <gridify ng-model="gridOptions" ng-class="gridStyle"></gridify>
