--- a/src/main/webapp/partials/division.html
+++ b/src/main/webapp/partials/division.html
@@ -4,7 +4,7 @@
     </button>
 </div>
 
-<select ui-select2 ng-model="select2" data-placeholder="Pick a number">
+<select ui-select2 ng-model="select2" data-placeholder="Pick a number" class="wp100">
     <option value=""></option>
     <option value="one">First</option>
     <option value="two">Second</option>
