--- a/src/main/webapp/partials/employee.html
+++ b/src/main/webapp/partials/employee.html
@@ -7,12 +7,10 @@
                 <div class="form-group row">
                     <!-- select user -->
                     <label for="uid" class="col-xs-1 control-label">User</label>
-                    <div class="col-xs-4" class="form-control">
-                        <select ui-select2 ng-model="test" data-placeholder="Pick a division">
+                    <div class="col-xs-4">
+                        <select ui-select2 ng-model="sDivision" data-placeholder="Please pick a division" class="wp100">
                             <option value=""></option>
-                            <option value="one">First</option>
-                            <option value="two">Second</option>
-                            <option value="three">Third</option>
+                            <option ng-repeat="division in divisions" value="{{division.id}}">{{division.name}}</option>
                         </select>
                     </div>
                     <!-- select status -->
