apply gulp workflow

--- a/components/html/index.html
+++ b/components/html/index.html
@@ -11,19 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 3rd style -->
-    <link rel="stylesheet" href="lib/html5-boilerplate/css/normalize.css">
-    <link rel="stylesheet" href="lib/html5-boilerplate/css/main.css">
-
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="lib/angular-grid/ng-grid.min.css"/>
-    <link rel="stylesheet" href="lib/select2/select2.css">
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/lib.css"/>
 
     <!-- app related -->
-    <link rel='stylesheet' href='css/font.css'>
-    <link rel="stylesheet" href="css/app.css"/>
-
-    <script src="lib/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body ng-controller="commonController">
     <div class="navbar navbar-inverse nrb">
@@ -55,33 +47,9 @@
     </div>
 
     <!-- 3rd dependencies -->
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="lib/lodash/dist/lodash.min.js"></script>
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/restangular/dist/restangular.min.js"></script>
-    <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="lib/angular-grid/build/ng-grid.min.js"></script>
-    <script src="lib/select2/select2.min.js"></script>
-    <script src="lib/angular-ui-select2/src/select2.js"></script>
+    <script src="js/lib.js"></script>
 
     <!-- application dependencies -->
-    <script src="js/app.js"></script>
-    <script src="js/config.js"></script>
-
-    <!-- controllers -->
-    <script src="js/controllers/commonCtrl.js"></script>
-    <script src="js/controllers/divisionCtrl.js"></script>
-    <script src="js/controllers/employeeCtrl.js"></script>
-
-    <!-- services -->
-    <script src="js/services/basicDataService.js"></script>
-
-    <!-- filters -->
-    <script src="js/filters/basicFilters.js"></script>
-
-    <!-- directives -->
-    <script src="js/directives/basicDirectives.js"></script>
-
+    <script src="js/script.js"></script>
 </body>
 </html>
